Fix tooltip z-index after adding sticky tables

--- a/docs/css/tooltip.css
+++ b/docs/css/tooltip.css
@@ -17,7 +17,7 @@
     padding: 1rem;
     background-color: #ccc;
     border-radius: 0.5rem;
-    z-index: 1;
+    z-index: 2000;
 }
 
 .tooltip-content::after {
